# dtos/participant.go
@@ -1,6 +1,8 @@
 package dtos
 
 import (
+	"fmt"
+
 	"github.com/go-playground/validator/v10"
 )
 
@@ -17,16 +19,20 @@ func (g GenderEnum) String() string {
 }
 
 func ValidateGender(fl validator.FieldLevel) bool {
+	fmt.Printf("%#v", fl)
 	return fl.Field().String() != ""
 }
 
-type RegisterParticipantDTO struct {
-	FirstName       string     `validate:"min=2" json:"first_name"`
-	LastName        string     `validate:"min=2" json:"last_name"`
-	Email           string     `validate:"email" json:"email"`
-	Password        string     `validate:"min=7,eqfield=Password" json:"password"`
-	ConfirmPassword string     `json:"confirm_password"`
-	Gender          GenderEnum `validate:"oneof=MALE FEMALE" json:"gender"`
+type RegisterNewParticipantDTO struct {
+	FirstName       string `validate:"min=2" json:"first_name"`
+	LastName        string `validate:"min=2" json:"last_name"`
+	Email           string `validate:"email" json:"email"`
+	Password        string `validate:"min=7" json:"password"`
+	ConfirmPassword string `validate:"eqfield=Password" json:"confirm_password"`
+	Gender          string `validate:"oneof=MALE FEMALE" json:"gender"`
+	GithubAddress   string `validate:"url" json:"github_address"`
+	LinkedInAddress string `json:"linkedIn_address"`
+	State           string `json:"state"`
 }
 
 type ParticipantAddResponseDTO struct {
